5.game-2048-hpa-https/load-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: game-2048
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget -q -O- http://game.haraapp.shop; done"]
