5.game-2048-hpa-https/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameapp-service
  namespace: game-2048
spec:
  selector:
    app: gameapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: gameapp-port
  type: ClusterIP
