5.game-2048-hpa-https/ingress_nginx.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-ingress
  namespace: game-2048
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
      - game.haraapp.shop
      secretName: gameapp-tls
  ingressClassName: nginx # Ensure you have the NGINX Ingress Controller installed
  rules:
  - host: game.haraapp.shop # Replace with your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gameapp-service
            port:
              number: 80
